--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,13 @@ nav {
 html,
 body {
   overflow-x: hidden;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 body {
