--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,11 @@ body {
   overflow-x: hidden;
   overflow: auto;
   scrollbar-width: none;
+  background-color: #000000;
+  color: white;
+  font-family: "Segoe UI", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 html::-webkit-scrollbar,
@@ -21,6 +26,8 @@ body {
   padding: 0;
   background-color: black;
   color: white;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .title-bg {
