--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,3 +83,41 @@ body {
   background: linear-gradient(to right, #1a1a1a 4%, #2a2a2a 25%, #1a1a1a 36%);
   background-size: 1000px 100%;
 }
+
+.loader {
+  width: 80px;
+  aspect-ratio: 1;
+  display: grid;
+  color: #542b9a;
+  background: radial-gradient(circle 16px, currentColor 94%, #0000);
+  -webkit-mask: radial-gradient(circle 5px, #0000 90%, #000);
+  animation: l10 1.5s infinite linear;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  grid-area: 1/1;
+  background: radial-gradient(
+        farthest-side at bottom right,
+        currentColor 94%,
+        #0000
+      )
+      top right,
+    radial-gradient(farthest-side at top left, currentColor 94%, #0000) bottom
+      left;
+  background-size: 40% 45%;
+  background-repeat: no-repeat;
+  -webkit-mask: radial-gradient(60% 100% at bottom right, #0000 94%, #000) top
+      right,
+    radial-gradient(60% 100% at top left, #0000 94%, #000) bottom left;
+  -webkit-mask-size: 40% 45%;
+  -webkit-mask-repeat: no-repeat;
+}
+.loader:after {
+  transform: rotate(90deg);
+}
+@keyframes l10 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
